Added Directors / Fixed Scrolling

--- a/html/index.html
+++ b/html/index.html
@@ -20,10 +20,10 @@
     <script src="./index.js" type="text/javascript"></script>
 </head>
 
-<body id="top">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+<body>
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a id="nav-top" class="navbar-brand" href="#top">
+            <a id="nav-top" class="navbar-brand" href="#section-top">
                 <img src="./logo.png" title="Kirkland Chase Courtyard Townhome Association" alt="KCCTA">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-responsive" aria-controls="navbar-responsive" aria-label="Toggle Navigation">
@@ -32,7 +32,7 @@
             <div id="navbar-responsive" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a id="nav-intro" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#section-intro" aria-controls="section-intro">Intro</a>
+                        <a id="nav-information" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#section-information" aria-controls="section-information">Information</a>
                     </li>
                     <li class="nav-item">
                         <a id="nav-directors" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#section-directors" aria-controls="section-directors">Directors</a>
@@ -47,12 +47,16 @@
             </div>
         </div>
     </nav>
-    <div id="section-intro">
+    <div id="section-top">
         <div class="jumbotron text-center">
             <h1>Kirkland Chase Courtyard Townhome Association</h1>
         </div>
+    </div>
+    <br />
+    <div id="section-information">
         <div class="card w-75 mx-auto">
             <div class="card-body">
+                <h2 class="card-title">Information</h2>
                 <p class="card-text">Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility.</p>
                 <p>
                     <div class="map-responsive">
@@ -67,7 +71,28 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Directors</h2>
-                <p class="card-text">Here are the directors.</p>
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img class="img-fluid rounded mx-auto" src="./avatar-male.png" title="Jim Dillenburg" alt="Jim Dillenburg" />
+                            <h3>Jim Dillenburg</h3>
+                            <p>President</p>
+                            <p><a href="mailto:dillenburg.james59@gmail.com">dillenburg.james59@gmail.com</a></p>
+                        </div>
+                        <div class="col-lg-4">
+                            <img class="img-fluid rounded mx-auto" src="./avatar-female.png" title="Diane Lidman" alt="Diane Lidman" />
+                            <h3>Diane Lidman</h3>
+                            <p>Secretary</p>
+                            <p><a href="mailto:lidmandiane@gmail.com">lidmandiane@gmail.com</a></p>
+                        </div>
+                        <div class="col-lg-4">
+                            <img class="img-fluid rounded mx-auto" src="./avatar-female.png" title="Sue Zillman" alt="Sue Zillman" />
+                            <h3>Sue Zillman</h3>
+                            <p>Treasurer</p>
+                            <p><a href="mailto:s.zillman@att.net">s.zillman@att.net</a></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -89,7 +114,12 @@
             </div>
         </div>
     </div>
-    <!-- TODO: Footer -->
+    <br />
+    <footer class="footer py-3 mt-auto">
+        <div class="container text-center">
+            <span class="text-muted">&copy; Copyright 2021</span>
+        </div>
+    </footer>
 </body>
 
 </html>
