--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,28 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Documents</h2>
-                <p class="card-text">Here are the documents.</p>
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <a href="./kccta-covenants-with-amendments.pdf" target="_blank">
+                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Covenants With Amendments" alt="PDF" />
+                                <p>Covenants With Amendments</p>
+                            </a>
+                        </div>
+                        <div class="col-lg-4">
+                            <a href="./kccta-master-association-declarations.pdf" target="_blank">
+                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Master Association Declarations" alt="PDF" />
+                                <p>Master Association Declarations</p>
+                            </a>
+                        </div>
+                        <div class="col-lg-4">
+                            <a href="./kccta-rules-and-regulations.pdf" target="_blank">
+                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Rules And Regulations" alt="PDF" />
+                                <p>Rules And Regulations</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
