Google Earth Image / HTML Cleanup

--- a/html/index.html
+++ b/html/index.html
@@ -57,12 +57,19 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Information</h2>
-                <p class="card-text">Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility.</p>
-                <p>
-                    <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d883.9528484076492!2d-88.28107335663364!3d41.82289030908815!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1619068208482!5m2!1sen!2sus" frameborder="0" allowfullscreen="true" loading="lazy"></iframe>
-                    </div>
-                </p>
+                <div class="card-text container text-center">
+                    <p class="lead">
+                        Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility.
+                    </p>
+                    <p>
+                        <img class="img-fluid rounded mx-auto" src="./google-earth.png" title="Kirkland Chase Courtyard Townhome Association" alt="KCCTA">
+                    </p>
+                    <p>
+                        <div class="map-responsive">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d883.9528484076492!2d-88.28107335663364!3d41.82289030908815!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1619068208482!5m2!1sen!2sus" frameborder="0" allowfullscreen="true" loading="lazy"></iframe>
+                        </div>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -71,7 +78,7 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Directors</h2>
-                <div class="container text-center">
+                <div class="card-text container text-center">
                     <div class="row">
                         <div class="col-lg-4">
                             <img class="img-fluid rounded mx-auto" src="./avatar-male.png" title="Jim Dillenburg" alt="Jim Dillenburg" />
@@ -101,7 +108,7 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Documents</h2>
-                <div class="container text-center">
+                <div class="card-text container text-center">
                     <div class="row">
                         <div class="col-lg-4">
                             <a href="./kccta-covenants-with-amendments.pdf" target="_blank">
@@ -131,14 +138,16 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Maintenance</h2>
-                <p class="card-text">Here is the maintenance information.</p>
+                <div class="card-text container">
+                    <p>Here is the maintenance information.</p>
+                </div>
             </div>
         </div>
     </div>
     <br />
-    <footer class="footer py-3 mt-auto">
+    <footer id="footer" class="footer py-3 mt-auto">
         <div class="container text-center">
-            <span class="text-muted">&copy; Copyright 2021</span>
+            <span class="text-muted">KCCTA | &copy; Copyright 2021</span>
         </div>
     </footer>
 </body>
