Gazebo Image / More Copy

--- a/html/index.html
+++ b/html/index.html
@@ -50,6 +50,16 @@
     <div id="section-top">
         <div class="jumbotron text-center">
             <h1>Kirkland Chase Courtyard Townhome Association</h1>
+            <p>Batavia, Illinois 60510</p>
+        </div>
+        <div class="card w-75 mx-auto">
+            <div class="card-body">
+                <div class="card-text container text-center">
+                    <p>
+                        <img class="img-fluid rounded mx-auto" src="./gazebo.png" title="Gazebo" alt="Gazebo" />
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <br />
@@ -60,6 +70,9 @@
                 <div class="card-text container text-center">
                     <p class="lead">
                         Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility.
+                    </p>
+                    <p>
+                        This website is intended for the members of the Kirkland Chase Courtyard Townhome Association.
                     </p>
                     <p>
                         <img class="img-fluid rounded mx-auto" src="./google-earth.png" title="Kirkland Chase Courtyard Townhome Association" alt="KCCTA">
@@ -79,7 +92,7 @@
             <div class="card-body">
                 <h2 class="card-title">Directors</h2>
                 <div class="card-text container text-center">
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="col-lg-4">
                             <img class="img-fluid rounded mx-auto" src="./avatar-male.png" title="Jim Dillenburg" alt="Jim Dillenburg" />
                             <h3>Jim Dillenburg</h3>
@@ -109,7 +122,10 @@
             <div class="card-body">
                 <h2 class="card-title">Documents</h2>
                 <div class="card-text container text-center">
-                    <div class="row">
+                    <p>
+                        Here's where you'll find information about KCCTA's governance and structure.
+                    </p>
+                    <div class="row justify-content-center">
                         <div class="col-lg-4">
                             <a href="./kccta-covenants-with-amendments.pdf" target="_blank">
                                 <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Covenants With Amendments" alt="PDF" />
@@ -138,8 +154,21 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Maintenance</h2>
-                <div class="card-text container">
-                    <p>Here is the maintenance information.</p>
+                <div class="card-text container text-center">
+                    <p>
+                        Here's where you'll find information about KCCTA building and maintenance standards. You can employ any contractor to perform a task that is your responsibility, at your own cost.
+                    </p>
+                    <p>
+                        KCCTA does not have approved vendors. The suppliers mentioned have done a good job for some of us but are not guaranteed or endorsed by the board. Ask your neighbors for more suggestions!
+                    </p>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4">
+                            <a href="./kccta-maintenance-and-repair-sheet.pdf" target="_blank">
+                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Maintenance And Repair Sheet" alt="PDF" />
+                                <p>Maintenance And Repair Sheet</p>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
