--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
             <h1>Kirkland Chase Courtyard Townhome Association</h1>
             <p>Batavia, Illinois 60510</p>
         </div>
-        <div class="card w-75 mx-auto">
+        <div class="card w-90 mx-auto">
             <div class="card-body">
                 <div class="card-text container text-center">
                     <p>
@@ -64,7 +64,7 @@
     </div>
     <br />
     <div id="section-information">
-        <div class="card w-75 mx-auto">
+        <div class="card w-90 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Information</h2>
                 <div class="card-text container text-center">
@@ -88,25 +88,25 @@
     </div>
     <br />
     <div id="section-directors">
-        <div class="card w-75 mx-auto">
+        <div class="card w-90 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Directors</h2>
                 <div class="card-text container text-center">
                     <div class="row justify-content-center">
                         <div class="col-lg-4">
-                            <img class="img-fluid rounded mx-auto" src="./avatar-male.png" title="Jim Dillenburg" alt="Jim Dillenburg" />
+                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-male.png" title="Jim Dillenburg" alt="Jim Dillenburg" />
                             <h3>Jim Dillenburg</h3>
                             <p>President</p>
                             <p><a href="mailto:dillenburg.james59@gmail.com">dillenburg.james59@gmail.com</a></p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="img-fluid rounded mx-auto" src="./avatar-female.png" title="Diane Lidman" alt="Diane Lidman" />
+                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Diane Lidman" alt="Diane Lidman" />
                             <h3>Diane Lidman</h3>
                             <p>Secretary</p>
                             <p><a href="mailto:lidmandiane@gmail.com">lidmandiane@gmail.com</a></p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="img-fluid rounded mx-auto" src="./avatar-female.png" title="Sue Zillman" alt="Sue Zillman" />
+                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Sue Zillman" alt="Sue Zillman" />
                             <h3>Sue Zillman</h3>
                             <p>Treasurer</p>
                             <p><a href="mailto:s.zillman@att.net">s.zillman@att.net</a></p>
@@ -118,7 +118,7 @@
     </div>
     <br />
     <div id="section-documents">
-        <div class="card w-75 mx-auto">
+        <div class="card w-90 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Documents</h2>
                 <div class="card-text container text-center">
@@ -128,19 +128,19 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-4">
                             <a href="./kccta-covenants-with-amendments.pdf" target="_blank">
-                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Covenants With Amendments" alt="PDF" />
+                                <img class="img-fluid rounded icon-small mx-auto" src="./pdf.png" title="Covenants With Amendments" alt="PDF" />
                                 <p>Covenants With Amendments</p>
                             </a>
                         </div>
                         <div class="col-lg-4">
                             <a href="./kccta-master-association-declarations.pdf" target="_blank">
-                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Master Association Declarations" alt="PDF" />
+                                <img class="img-fluid rounded icon-small mx-auto" src="./pdf.png" title="Master Association Declarations" alt="PDF" />
                                 <p>Master Association Declarations</p>
                             </a>
                         </div>
                         <div class="col-lg-4">
                             <a href="./kccta-rules-and-regulations.pdf" target="_blank">
-                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Rules And Regulations" alt="PDF" />
+                                <img class="img-fluid rounded icon-small mx-auto" src="./pdf.png" title="Rules And Regulations" alt="PDF" />
                                 <p>Rules And Regulations</p>
                             </a>
                         </div>
@@ -151,7 +151,7 @@
     </div>
     <br />
     <div id="section-maintenance">
-        <div class="card w-75 mx-auto">
+        <div class="card w-90 mx-auto">
             <div class="card-body">
                 <h2 class="card-title">Maintenance</h2>
                 <div class="card-text container text-center">
@@ -164,7 +164,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-4">
                             <a href="./kccta-maintenance-and-repair-sheet.pdf" target="_blank">
-                                <img class="img-fluid rounded mx-auto" src="./pdf.png" title="Maintenance And Repair Sheet" alt="PDF" />
+                                <img class="img-fluid rounded icon-small mx-auto" src="./pdf.png" title="Maintenance And Repair Sheet" alt="PDF" />
                                 <p>Maintenance And Repair Sheet</p>
                             </a>
                         </div>
