--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
             <a id="nav-top" class="navbar-brand" href="#section-top">
                 <img src="./logo.png" title="Kirkland Chase Courtyard Townhome Association" alt="KCCTA">
@@ -48,7 +48,7 @@
         </div>
     </nav>
     <div id="section-top">
-        <div class="jumbotron text-center">
+        <div class="jumbotron bg-light text-center">
             <h1>Kirkland Chase Courtyard Townhome Association</h1>
             <p>Batavia, Illinois 60510</p>
         </div>
@@ -97,19 +97,16 @@
                             <img class="img-fluid rounded icon-large mx-auto" src="./avatar-male.png" title="Jim Dillenburg" alt="Jim Dillenburg" />
                             <h3>Jim Dillenburg</h3>
                             <p>President</p>
-                            <p><a href="mailto:dillenburg.james59@gmail.com">dillenburg.james59@gmail.com</a></p>
                         </div>
                         <div class="col-lg-4">
                             <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Diane Lidman" alt="Diane Lidman" />
                             <h3>Diane Lidman</h3>
                             <p>Secretary</p>
-                            <p><a href="mailto:lidmandiane@gmail.com">lidmandiane@gmail.com</a></p>
                         </div>
                         <div class="col-lg-4">
                             <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Sue Zillman" alt="Sue Zillman" />
                             <h3>Sue Zillman</h3>
                             <p>Treasurer</p>
-                            <p><a href="mailto:s.zillman@att.net">s.zillman@att.net</a></p>
                         </div>
                     </div>
                 </div>
