--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Kirkland Chase Courtyard Townhome Association</title>
@@ -79,7 +79,7 @@
                     </p>
                     <p>
                         <div class="map-responsive">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d883.9528484076492!2d-88.28107335663364!3d41.82289030908815!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1619068208482!5m2!1sen!2sus" frameborder="0" allowfullscreen="true" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d883.9528484076492!2d-88.28107335663364!3d41.82289030908815!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1619068208482!5m2!1sen!2sus" title="Kirkland Chase Courtyard Townhome Association Map" frameborder="0" allowfullscreen="true" loading="lazy"></iframe>
                         </div>
                     </p>
                 </div>
