Dependency Bump / New Secretary / Added Management Company

--- a/html/index.html
+++ b/html/index.html
@@ -82,6 +82,9 @@
                             <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d883.9528484076492!2d-88.28107335663364!3d41.82289030908815!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1619068208482!5m2!1sen!2sus" title="Kirkland Chase Courtyard Townhome Association Map" frameborder="0" allowfullscreen="true" loading="lazy"></iframe>
                         </div>
                     </p>
+                    <p>
+                        KCCTA employs <a href="https://www.nwpropertymanagement.com" target="_blank">Northwest Property Management</a> as their association property manager. Details about dues, maintenance requests and other information is available on their website.
+                    </p>
                 </div>
             </div>
         </div>
@@ -99,8 +102,8 @@
                             <p>President</p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Diane Lidman" alt="Diane Lidman" />
-                            <h3>Diane Lidman</h3>
+                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Jan Wright" alt="Jan Wright" />
+                            <h3>Jan Wright</h3>
                             <p>Secretary</p>
                         </div>
                         <div class="col-lg-4">
@@ -173,7 +176,7 @@
     <br />
     <footer id="footer" class="footer py-3 mt-auto">
         <div class="container text-center">
-            <span class="text-muted">KCCTA | &copy; Copyright 2021</span>
+            <span class="text-muted">KCCTA | &copy; Copyright 2022</span>
         </div>
     </footer>
 </body>
