--- a/html/index.html
+++ b/html/index.html
@@ -97,19 +97,22 @@
                 <div class="card-text container text-center">
                     <div class="row justify-content-center">
                         <div class="col-lg-4">
-                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-male.png" title="Jim Dillenburg" alt="Jim Dillenburg" />
-                            <h3>Jim Dillenburg</h3>
+                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Lauren Lentine" alt="Lauren Lentine" />
+                            <h3>Lauren Lentine</h3>
                             <p>President</p>
+                            <p class="text-muted">2023 - 2026</p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Jan Wright" alt="Jan Wright" />
-                            <h3>Jan Wright</h3>
+                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-male.png" title="Geoff Anton" alt="Geoff Anton" />
+                            <h3>Geoff Anton</h3>
                             <p>Secretary</p>
+                            <p class="text-muted">2022 - 2025</p>
                         </div>
                         <div class="col-lg-4">
                             <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Sue Zillman" alt="Sue Zillman" />
                             <h3>Sue Zillman</h3>
                             <p>Treasurer</p>
+                            <p class="text-muted">2021 - 2024</p>
                         </div>
                     </div>
                 </div>
