--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,17 @@
     <script src="./jquery.min.js" type="text/javascript"></script>
     <script src="./bootstrap.min.js" type="text/javascript"></script>
     <script src="./index.js" type="text/javascript"></script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://www.schema.org",
+        "@type": "Organization",
+        "name": "Kirkland Chase Courtyard Townhome Association",
+        "alternateName": "KCCTA",
+        "description": "Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility.",
+        "url": "https://kccta.netlify.app",
+        "logo": "https://kccta.netlify.app/logo.png"
+    }
+    </script>    
 </head>
 
 <body>
