--- a/html/index.html
+++ b/html/index.html
@@ -190,7 +190,7 @@
     <br />
     <footer id="footer" class="footer py-3 mt-auto">
         <div class="container text-center">
-            <span class="text-muted">KCCTA | &copy; Copyright 2022</span>
+            <span class="text-muted">© 2023 Kirkland Chase Courtyard Townhome Association</span>
         </div>
     </footer>
 </body>
