--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
         "url": "https://kccta.netlify.app",
         "logo": "https://kccta.netlify.app/logo.png"
     }
-    </script>    
+    </script>
 </head>
 
 <body>
@@ -66,9 +66,32 @@
         <div class="card w-90 mx-auto">
             <div class="card-body">
                 <div class="card-text container text-center">
-                    <p>
-                        <img class="img-fluid rounded mx-auto" src="./gazebo.png" title="Gazebo" alt="Gazebo" />
-                    </p>
+                    <div id="carousel" class="carousel slide" data-ride="false">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel" data-slide-to="1"></li>
+                            <li data-target="#carousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block rounded w-100" src="./gazebo-spring.png" title="Gazebo, Spring" alt="Gazebo, Spring">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block rounded w-100" src="./gazebo-winter.png" title="Gazebo, Winter" alt="Gazebo, Winter">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block rounded w-100" src="./building-rainbow.png" title="Rainbow Over Building" alt="Rainbow Over Building">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
