--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,15 @@
         <div class="container">
             <a id="nav-top" class="navbar-brand" href="#section-top">
                 <img src="./logo.png" title="Kirkland Chase Courtyard Townhome Association" alt="KCCTA">
+                <div id="brand-header">
+                    <h1 class="small">
+                        Kirkland Chase Courtyard
+                        <br />
+                        Townhome Association
+                        <br />
+                        <span class="text-muted">Batavia, IL 60510</span>
+                    </h1>
+                </div>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-responsive" aria-controls="navbar-responsive" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,9 +68,12 @@
         </div>
     </nav>
     <div id="section-top">
-        <div class="jumbotron bg-light text-center">
-            <h1>Kirkland Chase Courtyard Townhome Association</h1>
-            <p>Batavia, Illinois 60510</p>
+        <div id="brand-jumbotron" class="jumbotron bg-light text-center">
+            <h1>
+                Kirkland Chase Courtyard Townhome Association
+                <br />
+                <span class="text-muted">Batavia, IL 60510</span>
+            </h1>
         </div>
         <div class="card w-90 mx-auto">
             <div class="card-body">
