Updated Contacts Section

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
                         <a id="nav-information" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#section-information" aria-controls="section-information">Information</a>
                     </li>
                     <li class="nav-item">
-                        <a id="nav-directors" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#section-directors" aria-controls="section-directors">Directors</a>
+                        <a id="nav-contact" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#section-contact" aria-controls="section-contact">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a id="nav-documents" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#section-documents" aria-controls="section-documents">Documents</a>
@@ -128,35 +128,51 @@
                             <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d883.9528484076492!2d-88.28107335663364!3d41.82289030908815!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1619068208482!5m2!1sen!2sus" title="Kirkland Chase Courtyard Townhome Association Map" frameborder="0" allowfullscreen="true" loading="lazy"></iframe>
                         </div>
                     </p>
-                    <p>
-                        KCCTA employs <a href="https://www.nwpropertymanagement.com" target="_blank">Northwest Property Management</a> as their association property manager. Details about dues, maintenance requests and other information is available on their website.
-                    </p>
                 </div>
             </div>
         </div>
     </div>
     <br />
-    <div id="section-directors">
+    <div id="section-contact">
         <div class="card w-90 mx-auto">
             <div class="card-body">
-                <h2 class="card-title">Directors</h2>
+                <h2 class="card-title">Contact</h2>
                 <div class="card-text container text-center">
+                    <h3 class="text-muted">Property Management</h3>
+                    <p>
+                        <a href="https://www.nwpropertymanagement.com" target="_blank"><img class="img-fluid rounded mx-auto" src="./northwest-property-management.png" title="Northwest Property Management" alt="Northwest Property Management" /></a>
+                    </p>
+                    <p>
+                        KCCTA employs <a href="https://www.nwpropertymanagement.com" target="_blank">Northwest Property Management</a> as their association property manager. Details about dues, maintenance requests and other information is available on their website.
+                    </p>
+                    <p>
+                        <dl>
+                            <dt>Contact Form</dt>
+                            <dd><a href="https://www.nwpropertymanagement.com/contact-us.html" target="_blank">Click Here</a></dd>
+                            <dt>Telephone</dt>
+                            <dd><a href="tel:6304026558">630-402-6558</a></dd>
+                        </dl>
+                    </p>
+                    <h3 class="text-muted">Board Of Directors</h3>
+                    <p>
+                        KCCTA utilizes an elected board of directors consisting of a president, secretary and treasurer.
+                    </p>
                     <div class="row justify-content-center">
                         <div class="col-lg-4">
                             <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Lauren Lentine" alt="Lauren Lentine" />
-                            <h3>Lauren Lentine</h3>
+                            <h4>Lauren Lentine</h4>
                             <p>President</p>
                             <p class="text-muted">2023 - 2026</p>
                         </div>
                         <div class="col-lg-4">
                             <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Sue Zillman" alt="Sue Zillman" />
-                            <h3>Sue Zillman</h3>
+                            <h4>Sue Zillman</h4>
                             <p>Secretary</p>
                             <p class="text-muted">2021 - 2024</p>
                         </div>
                         <div class="col-lg-4">
                             <img class="img-fluid rounded icon-large mx-auto" src="./avatar-male.png" title="Geoff Anton" alt="Geoff Anton" />
-                            <h3>Geoff Anton</h3>
+                            <h4>Geoff Anton</h4>
                             <p>Treasurer</p>
                             <p class="text-muted">2022 - 2025</p>
                         </div>
