--- a/html/index.html
+++ b/html/index.html
@@ -112,7 +112,7 @@
     <div id="section-information">
         <div class="card w-90 mx-auto">
             <div class="card-body">
-                <h2 class="card-title">Information</h2>
+                <h2 class="card-title text-center">Information</h2>
                 <div class="card-text container text-center">
                     <p class="lead">
                         Located in the far west Chicago suburb of Batavia, the Kirkland Chase Courtyard Townhomes offer a blend of Fox Valley charm and Chicago sensibility.
@@ -120,9 +120,11 @@
                     <p>
                         This website is intended for the members of the Kirkland Chase Courtyard Townhome Association.
                     </p>
+                    <h3 class="text-muted">Overhead View</h3>
                     <p>
                         <img class="img-fluid rounded mx-auto" src="./google-earth.png" title="Kirkland Chase Courtyard Townhome Association" alt="KCCTA">
                     </p>
+                    <h3 class="text-muted">Interactive Map</h3>
                     <p>
                         <div class="map-responsive">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d883.9528484076492!2d-88.28107335663364!3d41.82289030908815!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1619068208482!5m2!1sen!2sus" title="Kirkland Chase Courtyard Townhome Association Map" frameborder="0" allowfullscreen="true" loading="lazy"></iframe>
@@ -136,7 +138,7 @@
     <div id="section-contact">
         <div class="card w-90 mx-auto">
             <div class="card-body">
-                <h2 class="card-title">Contact</h2>
+                <h2 class="card-title text-center">Contact</h2>
                 <div class="card-text container text-center">
                     <h3 class="text-muted">Property Management</h3>
                     <p>
@@ -185,7 +187,7 @@
     <div id="section-documents">
         <div class="card w-90 mx-auto">
             <div class="card-body">
-                <h2 class="card-title">Documents</h2>
+                <h2 class="card-title text-center">Documents</h2>
                 <div class="card-text container text-center">
                     <p>
                         Here's where you'll find information about KCCTA's governance and structure.
@@ -218,7 +220,7 @@
     <div id="section-maintenance">
         <div class="card w-90 mx-auto">
             <div class="card-body">
-                <h2 class="card-title">Maintenance</h2>
+                <h2 class="card-title text-center">Maintenance</h2>
                 <div class="card-text container text-center">
                     <p>
                         Here's where you'll find information about KCCTA building and maintenance standards. You can employ any contractor to perform a task that is your responsibility, at your own cost.
