Added HR's / Tweaked Copy

--- a/html/index.html
+++ b/html/index.html
@@ -120,10 +120,12 @@
                     <p>
                         This website is intended for the members of the Kirkland Chase Courtyard Townhome Association.
                     </p>
+                    <hr />
                     <h3 class="text-muted">Overhead View</h3>
                     <p>
                         <img class="img-fluid rounded mx-auto" src="./google-earth.png" title="Kirkland Chase Courtyard Townhome Association" alt="KCCTA">
                     </p>
+                    <hr />
                     <h3 class="text-muted">Interactive Map</h3>
                     <p>
                         <div class="map-responsive">
@@ -155,9 +157,10 @@
                             <dd><a href="tel:6304026558">630-402-6558</a></dd>
                         </dl>
                     </p>
+                    <hr />
                     <h3 class="text-muted">Board Of Directors</h3>
                     <p>
-                        KCCTA utilizes an elected board of directors consisting of a president, secretary and treasurer.
+                        KCCTA utilizes an elected board of directors consisting of a president, secretary and treasurer. These offices are staffed by association members and voted on by the association at its annual meeting.
                     </p>
                     <div class="row justify-content-center">
                         <div class="col-lg-4">
