Fixed Links / UI Tweaks

--- a/html/index.html
+++ b/html/index.html
@@ -144,15 +144,15 @@
                 <div class="card-text container text-center">
                     <h3 class="text-muted">Property Management</h3>
                     <p>
-                        <a href="https://www.nwpropertymanagement.com" target="_blank"><img class="img-fluid rounded mx-auto" src="./northwest-property-management.png" title="Northwest Property Management" alt="Northwest Property Management" /></a>
+                        <a href="https://www.northwestpropertymanagement.net" target="_blank"><img class="img-fluid rounded mx-auto" src="./northwest-property-management.png" title="Northwest Property Management" alt="Northwest Property Management" /></a>
                     </p>
                     <p>
-                        KCCTA employs <a href="https://www.nwpropertymanagement.com" target="_blank">Northwest Property Management</a> as their association property manager. Details about dues, maintenance requests and other information is available on their website.
+                        KCCTA employs <a href="https://www.northwestpropertymanagement.net" target="_blank">Northwest Property Management</a> as their association property manager. Details about dues, maintenance requests and other information is available on their website.
                     </p>
                     <p>
                         <dl>
                             <dt>Contact Form</dt>
-                            <dd><a href="https://www.nwpropertymanagement.com/contact-us.html" target="_blank">Click Here</a></dd>
+                            <dd><a href="https://www.northwestpropertymanagement.net/request-work-order-or-questions/" target="_blank">Click Here</a></dd>
                             <dt>Telephone</dt>
                             <dd><a href="tel:6304026558">630-402-6558</a></dd>
                         </dl>
@@ -160,28 +160,17 @@
                     <hr />
                     <h3 class="text-muted">Board Of Directors</h3>
                     <p>
-                        KCCTA utilizes an elected board of directors consisting of a president, secretary and treasurer. These offices are staffed by association members and voted on by the association at its annual meeting.
+                        Members of KCCTA's three-member board serve three-year rotating terms, with one member elected each year at the annual meeting of homeowners. They hold the positions of president, secretary and treasurer.
                     </p>
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4">
-                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Lauren Lentine" alt="Lauren Lentine" />
-                            <h4>Lauren Lentine</h4>
-                            <p>President</p>
-                            <p class="text-muted">2023 - 2026</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-female.png" title="Sue Zillman" alt="Sue Zillman" />
-                            <h4>Sue Zillman</h4>
-                            <p>Secretary</p>
-                            <p class="text-muted">2021 - 2024</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img class="img-fluid rounded icon-large mx-auto" src="./avatar-male.png" title="Geoff Anton" alt="Geoff Anton" />
-                            <h4>Geoff Anton</h4>
-                            <p>Treasurer</p>
-                            <p class="text-muted">2022 - 2025</p>
-                        </div>
-                    </div>
+                    <h4>2023 Board Members</h4>
+                    <dl>
+                        <dt>President</dt>
+                        <dd>Lauren Lentine</dd>
+                        <dt>Secretary</dt>
+                        <dd>Sue Zillman</dd>
+                        <dt>Treasurer</dt>
+                        <dd>Geoff Anton</dd>
+                    </dl>
                 </div>
             </div>
         </div>
@@ -246,7 +235,8 @@
     <br />
     <footer id="footer" class="footer py-3 mt-auto">
         <div class="container text-center">
-            <span class="text-muted">© 2023 Kirkland Chase Courtyard Townhome Association</span>
+            <p class="text-muted">© 2023 Kirkland Chase Courtyard Townhome Association</p>
+            <p class="text-muted">Source On <a href="https://github.com/IronManRust/kccta" target="_blank">GitHub</a> | Hosted By <a href="https://www.netlify.com" target="_blank">Netlify</a></p>
         </div>
     </footer>
 </body>
